--- a/app/src/main/res/layout/activity_comentar_postagem.xml
+++ b/app/src/main/res/layout/activity_comentar_postagem.xml
@@ -25,11 +25,12 @@
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:text="Salvar Postagem"
+        android:text="Salvar Comentário"
         android:id="@+id/btSalvarPostagemC"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="#007ea4" />
+        android:background="#007ea4"
+        android:textColor="#ffffff" />
 
     <EditText
         android:layout_width="fill_parent"
