--- a/app/src/main/res/layout/activity_logar.xml
+++ b/app/src/main/res/layout/activity_logar.xml
@@ -53,5 +53,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="54dp"
-        android:background="#007ea4" />
+        android:background="#007ea4"
+        android:textColor="#ffffff" />
 </RelativeLayout>
