--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -1,47 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.lucas.uniforajuda.MenuPrincipal"
     android:background="#da111010">
-
-    <Button
-        android:layout_width="350dp"
-        android:layout_height="65dp"
-        android:text="Nova Postagem"
-        android:id="@+id/btPostagem"
-        android:background="#007ea4"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btHistorico"
-        android:layout_marginBottom="89dp"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:layout_width="175dp"
-        android:layout_height="65dp"
-        android:text="Histórico Geral"
-        android:id="@+id/btHistorico"
-        android:background="#007ea4"
-        android:layout_above="@+id/btPostagem"
-        android:layout_toStartOf="@+id/btMeuHistorico"
-        android:clickable="true"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:layout_width="175dp"
-        android:layout_height="65dp"
-        android:text="Meu Histórico"
-        android:id="@+id/btMeuHistorico"
-        android:background="#007ea4"
-        android:layout_alignBaseline="@+id/btHistorico"
-        android:layout_alignBottom="@+id/btHistorico"
-        android:layout_alignParentEnd="true"
-        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -54,4 +22,51 @@
         android:layout_marginTop="96dp"
         android:textSize="50dp"
         android:textColor="#007ea4" />
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="159dp"
+            android:layout_height="65dp"
+            android:text="Nova Postagem"
+            android:id="@+id/btPostagem"
+            android:layout_gravity="center"
+            android:layout_weight="0.15"
+            android:background="#007ea4"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/btHistorico"
+
+            android:textColor="#ffffff" />
+
+        <Button
+            android:layout_width="154dp"
+            android:layout_height="65dp"
+            android:text="@string/historico"
+            android:layout_gravity="left"
+            android:id="@+id/btHistorico"
+            android:background="#007ea4"
+            android:layout_above="@+id/btPostagem"
+            android:layout_toStartOf="@+id/btMeuHistorico"
+            android:clickable="true"
+            android:textColor="#ffffff" />
+
+
+
+    </LinearLayout>
+
+
+    <Button
+        android:layout_width="175dp"
+        android:layout_height="65dp"
+        android:text="Pesquisar"
+        android:id="@+id/btMeuHistorico"
+        android:background="#007ea4"
+        android:layout_alignBaseline="@+id/btHistorico"
+        android:layout_alignBottom="@+id/btHistorico"
+        android:layout_alignParentEnd="true"
+        android:textColor="#ffffff" />
+
+
+</LinearLayout>
