*Implementação de novo menu *implementação de respostas *comandos sql de relacionamento re-estruturado para suportar 3 tabelas em relacionamento *implementação do listview somente para respostas da postagem *função logoff *botoes para retornar ao menu. *seleção de postagem para realizar  o procedimento de respostas

--- a/app/src/main/res/layout/activity_logar.xml
+++ b/app/src/main/res/layout/activity_logar.xml
@@ -26,6 +26,7 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="45dp"
+        android:inputType="numberPassword"
         android:id="@+id/etMatricula"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
