--- a/app/src/main/res/layout/activity_comentar_postagem.xml
+++ b/app/src/main/res/layout/activity_comentar_postagem.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,35 +15,51 @@
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="45dp"
-        android:id="@+id/etTituloC"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:autoText="true"
-        android:background="#fbfafa"
-        android:capitalize="sentences" />
-
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:text="Salvar Comentário"
-        android:id="@+id/btSalvarPostagemC"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="#007ea4"
-        android:textColor="#ffffff" />
-
-    <EditText
-        android:layout_width="fill_parent"
         android:layout_height="380dp"
         android:id="@+id/etPostagemC"
-        android:layout_above="@+id/btSalvarPostagemC"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp"
         android:background="#fbfafa"
         android:autoText="true"
         android:capitalize="sentences"
-        android:gravity="top|left" />
+        android:gravity="top|left"
+        android:layout_marginTop="55dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
 
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="351dp"
+        android:layout_height="92dp"
+        android:weightSum="1"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="82dp"
+
+            android:layout_marginLeft="50dp"
+            android:text="Salvar Resposta"
+            android:id="@+id/btSalvarComentario"
+
+            android:background="#007ea4"
+            android:textColor="#ffffff"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:drawableBottom="@drawable/save"
+            android:layout_below="@+id/etPostagemC" />
+        <Button
+            android:textColor="#ffffff"
+            android:layout_width="107dp"
+            android:layout_height="84dp"
+            android:text="@string/botao_retorna_menu"
+            android:id="@+id/botao_retornar"
+            android:layout_marginLeft="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="51dp"
+            android:background="#007ea4"
+            android:drawableBottom="@drawable/back" />
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
