--- a/app/src/main/res/layout/activity_listar_postagens.xml
+++ b/app/src/main/res/layout/activity_listar_postagens.xml
@@ -1,25 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.lucas.uniforajuda.ListarPostagens"
     android:background="#da111010"
-    android:visibility="visible"
-    android:clickable="false">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listViewPostagens"
-        android:layout_alignParentTop="true"
+    android:clickable="false"
+    android:weightSum="1">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="325dp"
+        android:layout_weight="0.82">
+
+        <ListView
+
+            android:layout_width="match_parent"
+            android:layout_height="432dp"
+            android:id="@+id/listViewPostagens"
+            android:clickable="false"
+            android:textColor="#ffffff"
+            android:textFilterEnabled="false"
+            android:visibility="visible"
+            android:stackFromBottom="false"
+            android:layout_alignParentStart="true"
+
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="90dp" />
+
+    </LinearLayout>
+
+
+    <Button
+        android:layout_marginTop="10dp"
+        android:textColor="#ffffff"
+        android:layout_width="107dp"
+        android:layout_height="84dp"
+        android:text="@string/botao_retorna_menu"
+        android:id="@+id/botao_retornar"
+        android:layout_marginLeft="10dp"
+        android:background="#007ea4"
+        android:drawableBottom="@drawable/back"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:textFilterEnabled="false"
-        android:visibility="visible"
-        android:stackFromBottom="false" />
-</RelativeLayout>
+        android:layout_gravity="center_horizontal" />
+
+</LinearLayout>
