--- a/app/src/main/res/layout/activity_postagem.xml
+++ b/app/src/main/res/layout/activity_postagem.xml
@@ -1,39 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.lucas.uniforajuda.Postagem"
     android:background="#da111010">
 
     <EditText
+        android:layout_marginTop="30dp"
         android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:id="@+id/etTitulo"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:autoText="true"
         android:background="#fbfafa"
         android:hint="Titulo (ajudará outros usuários)"
-        android:capitalize="sentences" />
-
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:text="Salvar Postagem"
-        android:id="@+id/btSalvarPostagem"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="#007ea4"
-        android:textColor="#ffffff" />
+        android:capitalize="sentences"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
+        android:layout_marginTop="30dp"
         android:layout_width="fill_parent"
-        android:layout_height="380dp"
+        android:layout_height="235dp"
         android:id="@+id/etPostagem"
         android:background="#fbfafa"
         android:autoText="true"
@@ -43,4 +36,37 @@
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:layout_width="90dp"
+            android:layout_height="80dp"
+            android:text="Salvar Postagem"
+            android:id="@+id/btSalvarPostagem"
+            android:background="#007ea4"
+            android:textColor="#ffffff"
+            android:drawableBottom="@drawable/save"
+            android:layout_alignTop="@+id/botao_retornar"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="66dp"
+            android:layout_alignParentBottom="true" />
+        <Button
+            android:textColor="#ffffff"
+            android:layout_width="95dp"
+            android:layout_height="84dp"
+            android:text="@string/botao_retorna_menu"
+            android:id="@+id/botao_retornar"
+            android:layout_marginLeft="60dp"
+            android:background="#007ea4"
+            android:drawableBottom="@drawable/back"
+            android:layout_toEndOf="@+id/btSalvarPostagem"
+            android:layout_alignParentBottom="true" />
+
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
